src/test/data/psi_tree/syntax_errors/toplevel_tag.tz
code {
       Pair 123 123;
     }